--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -2,7 +2,7 @@
 $primary: hsl(217, 19%, 35%);
 $secondary: hsl(214, 17%, 51%);
 $success: hsl(212, 23%, 69%);
-$info: hsl(210, 46%, 95%);
+$background: hsl(210, 46%, 95%);
 
 // FONTS
 $main-font: "Manrope", sans-serif;
