HTML Section. Done.

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -9,7 +9,8 @@
 
 .card {
   width: 33rem;
-  height: 51.4rem;
+  // height: 51.4rem;
   background-color: white;
   border-radius: 1rem;
+  margin: 7rem 0;
 }
