--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -9,12 +9,23 @@
 }
 
 .card {
+  position: relative;
   width: 33rem;
-  // height: 51.4rem;
   background-color: white;
   border-radius: 1rem;
   margin: 7rem 0;
   overflow: hidden;
+
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   height: 7rem;
+  //   width: inherit;
+  //   background-color: $primary;
+  //   display: none;
+  // }
 
   &__header {
     height: 20rem;
@@ -91,5 +102,51 @@
     outline: none;
     padding: 1rem;
     background-color: $background;
+    transition: all 250ms ease;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+}
+
+.active {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 6.4rem;
+  width: inherit;
+  background-color: $primary;
+  // display: none;
+
+  &__list {
+    display: flex;
+    align-items: center;
+    height: inherit;
+    padding: 0% 2rem;
+  }
+
+  &__item {
+    list-style: none;
+    margin: 0% 1rem;
+  }
+
+  &__item:last-child {
+    margin-left: auto;
+  }
+
+  &__description {
+    text-transform: uppercase;
+    color: $success;
+    letter-spacing: 5px;
+  }
+
+  &__link--share {
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    padding: 1rem;
+    background-color: $secondary;
   }
 }
