--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -15,6 +15,7 @@
   border-radius: 1rem;
   margin: 7rem 0;
   overflow: hidden;
+  animation: bounceInDown 1s;
 
   @include rwd(large) {
     width: 731px;
@@ -121,13 +122,9 @@
     background-color: $background;
     transition: all 250ms ease;
     cursor: pointer;
-
-    &:hover {
-      opacity: 0.8;
-    }
   }
 
-  &__footer {
+  &__active {
     display: none;
     animation: fadeIn 350ms;
   }
@@ -141,16 +138,19 @@
   width: inherit;
   background-color: $primary;
   display: block;
+  border-radius: 0 0 1rem 1rem;
 
   &::after {
-    content: "";
-    width: 2rem;
-    height: 2rem;
-    background-color: inherit;
-    position: absolute;
-    bottom: -17%;
-    left: 53%;
-    transform: translateX(-50%) rotate(45deg);
+    @include rwd(large) {
+      content: "";
+      width: 2rem;
+      height: 2rem;
+      background-color: inherit;
+      position: absolute;
+      bottom: -17%;
+      left: 53%;
+      transform: translateX(-50%) rotate(45deg);
+    }
   }
 
   @include rwd(large) {
@@ -182,11 +182,14 @@
     }
   }
 
+  &__item--social svg:hover {
+    animation: spin 300ms linear;
+  }
+
   &__item:last-child {
     margin-left: auto;
 
     @include rwd(large) {
-      // display: none;
       position: absolute;
       bottom: -68px;
       right: 97px;
@@ -206,15 +209,9 @@
     padding: 1rem;
     background-color: $secondary;
     cursor: pointer;
-  }
-}
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
+    @include rwd(large) {
+      background-color: $primary;
+    }
   }
 }
