Updating cad width and height.

--- a/public/sass/_card.scss
+++ b/public/sass/_card.scss
@@ -18,8 +18,8 @@
   animation: bounceInDown 1s;
 
   @include rwd(large) {
-    width: 731px;
-    height: 281px;
+    width: 73.1rem;
+    height: 28.1rem;
     display: flex;
     box-shadow: 35px 55px 32px -13px rgb(220, 228, 234);
     overflow: unset;
